fabricmon (0.1.4) stretch; urgency=medium

  * Add missing args to sysv init script

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Mon, 22 Oct 2018 11:53:56 +0200

fabricmon (0.1.3) stretch; urgency=medium

  * Add sysv init script
  * Add additional device IDs to lookup table in web UI

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Mon, 22 Oct 2018 11:27:33 +0200

fabricmon (0.1.2) stretch; urgency=medium

  * Move default config location to /etc/fabricmon
  * Include web UI chrome in package

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Mon, 16 Jul 2018 13:59:55 +0200

fabricmon (0.1.1) stretch; urgency=medium

  * Eliminate unnecessary node name map lookup in ForceGraphWriter
  * Add tests for NodeNameMap

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Mon, 16 Jul 2018 12:32:20 +0200

fabricmon (0.1.0) stretch; urgency=medium

  * Refactor logging to use context loggers
  * Internal refactoring
  * Write node description to InfluxDB as a tag

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Fri, 13 Jul 2018 16:38:12 +0200

fabricmon (0.0.7) stretch; urgency=medium

  * Minor InfluxDBWriter refactoring
  * Minor logging refactoring

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Thu, 12 Jul 2018 13:14:40 +0200

fabricmon (0.0.6) stretch; urgency=medium

  * Implement fsnotify watch for IB node name map

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Wed, 11 Jul 2018 18:24:30 +0200

fabricmon (0.0.5) stretch; urgency=medium

  * Fix wrong config filename in systemd service

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Tue, 10 Jul 2018 13:50:15 +0200

fabricmon (0.0.4) stretch; urgency=medium

  * Use yaml.Unmarshal(), since UnmarshalStrict() is not supported by stretch

 -- Daniel Swarbrick <dswarbrick@users.noreply.github.com>  Tue, 10 Jul 2018 13:40:40 +0200

fabricmon (0.0.3) stretch; urgency=medium
